# ncnet

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  TODO  build.sh  build_install.sh  clean.sh  install.sh  run_test.sh  uninstall.sh
cmake/: FindCryptoPP.cmake
include/: Boilerplate.h  Client.h  CommonNetwork.h  Connection.h  EventPipe.h  Information.h  InvalidPacketException.h  Log.h  Network.h  NetworkCommunication.h  Packet.h  PartialPacket.h  Security.h  Server.h  Transfer.h
src/: Client.cpp  CommonNetwork.cpp  Connection.cpp  EventPipe.cpp  Information.cpp  Log.cpp  Network.cpp  NetworkCommunication.cpp  Packet.cpp  PartialPacket.cpp  Security.cpp  Server.cpp
test/: TestTransfer.cpp  test_ncnet.cpp
